--- a/AnimaisFantasticos/.eslintrc.json
+++ b/AnimaisFantasticos/.eslintrc.json
@@ -1,20 +1,20 @@
 {
-  "env": {
-    "browser": true,
-    "es6": true
-  },
-  "extends": ["airbnb-base", "prettier"],
-  "globals": {
-    "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
-  },
-  "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module"
-  },
-  "rules": {
-    "no-param-reassign": 0,
-    "import/extensions":0,
-    "no-console":0
-  }
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "es6": true
+    },
+    "extends": [
+        "airbnb-base",
+        "prettier"
+    ],
+    "parserOptions": {
+        "ecmaVersion": 2021,
+        "sourceType": "module"
+    },
+    "rules": {
+        "no-param-reassign": 0,
+        "import/extensions": 0,
+        "no-console": 0
+    }
 }
