--- a/AnimaisFantasticos/package.json
+++ b/AnimaisFantasticos/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "1003-eslint",
+  "name": "animaisfantasticos",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./js/script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:watch": "webpack -w --mode development",
+    "build:prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "eslint-config-prettier": "^6.11.0"
+    "eslint-config-prettier": "^8.3.0"
   }
 }
