--- a/AnimaisFantasticos/package.json
+++ b/AnimaisFantasticos/package.json
@@ -5,12 +5,16 @@
   "main": "./js/script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:watch": "webpack -w --mode development",
-    "build:prod": "webpack --mode production"
+    "dev": "webpack -w --mode development",
+    "prod": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "babel-loader": "^8.2.3",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
